# ZTM-Gdansk-Home-Assistant-integration

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements-test.txt  requirements_test.txt
custom_components/ztm_gdansk/: __init__.py  api.py  binary_sensor.py  config_flow.py  config_schema.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/ztm_gdansk/tools/: __init__.py  find_stops.py
custom_components/ztm_gdansk/translations/: en.json  pl.json
custom_components/ztm_gdansk/www/: ztm-gdansk-card.js
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_config_schema.py  test_coordinator.py  test_find_stops.py  test_sensor.py  test_setup.py
tests/fixtures/: bsk.json  departures.json  display_messages.json  displays.json  routes.json  stops.json  stopsintrip.json  znt.json
